--- a/src/index.html
+++ b/src/index.html
@@ -3,14 +3,14 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Apollogroup</title>
+  <title>Optica New Vision</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   <!-- Favicon Links -->
-  <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon-16x16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="./assets/logo/logo_1.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/logo/logo_1.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./assets/logo/logo_1.png">
   <link rel="manifest" href="./assets/site.webmanifest">
   
   <!-- Fonts and Icons -->
