--- a/src/index.html
+++ b/src/index.html
@@ -1,25 +1,34 @@
 <!doctype html>
-<html lang="en">
-
+<html lang="es">
 <head>
   <meta charset="utf-8">
   <title>Optica New Vision</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  
-  <!-- Favicon Links -->
+
+  <!-- Íconos y manifest -->
   <link rel="apple-touch-icon" sizes="180x180" href="./assets/logo/logo_1.png">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/logo/logo_1.png">
   <link rel="icon" type="image/png" sizes="16x16" href="./assets/logo/logo_1.png">
   <link rel="manifest" href="./assets/site.webmanifest">
-  
-  <!-- Fonts and Icons -->
+
+  <!-- Bootstrap 4.6 compatible con Select -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select/dist/css/bootstrap-select.min.css">
+
+  <!-- Fuentes y Material Icons -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
 <body class="mat-typography">
   <app-root></app-root>
-</body>
 
+  <!-- jQuery primero -->
+  <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+  <!-- Bootstrap 4.6 JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- Bootstrap Select plugin -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap-select/dist/js/bootstrap-select.min.js"></script>
+</body>
 </html>
